--- a/action.yml
+++ b/action.yml
@@ -32,7 +32,7 @@ runs:
       uses: slackapi/slack-github-action@v1
       with:
         channel-id: "#${{ inputs.slack_channel }}" 
-        update-ts: ${{ inputs.update-ts }}
+        update-ts: ${{ inputs.update_ts }}
         payload: |
           {
             "text": ":github: Workflow run by: *${{ github.actor }}*",
