--- a/action.yml
+++ b/action.yml
@@ -30,6 +30,7 @@ runs:
         fi
     - name: Slack Action
       uses: slackapi/slack-github-action@v1
+      id: slack
       with:
         channel-id: "${{ inputs.slack_channel }}" 
         update-ts: ${{ steps.slack.outputs.ts }}
