--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,8 @@ runs:
       uses: slackapi/slack-github-action@v1
       id: slack
       with:
-        channel-id: "${{ inputs.slack_channel }}" 
+        #channel-id: "${{ inputs.slack_channel }}"
+        channel-id: "#${{ inputs.slack_channel }}" 
         update-ts: ${{ inputs.update_ts }}
         payload: |
           {
