--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,13 @@ outputs:
 runs:
   using: 'composite'
   steps:
+    - name: Conver ID to Name
+      shell: bash
+      run: |
+        get_channel_id=$(curl -X GET "https://slack.com/api/conversations.list" \
+        -H  "accept: application/x-www-form-urlencoded" \
+        -H  "Authorization: Bearer ${{ secrets.SLACK_BOT_TOKEN }}" | python3 -m json.tool | grep -B1 ${{ inputs.slack_channel }} | head -1 | cut -d"\"" -f4)
+        echo "slack_channel_id=$get_channel_id" >> $GITHUB_ENV
     - name: Set Slack color
       shell: bash
       run: |
@@ -36,8 +43,7 @@ runs:
       uses: slackapi/slack-github-action@v1
       id: slack
       with:
-        #channel-id: "${{ inputs.slack_channel }}"
-        channel-id: "#${{ inputs.slack_channel }}" 
+        channel-id: "${{ env.slack_channel_id }}" 
         update-ts: ${{ inputs.update_ts }}
         payload: |
           {
