--- a/action.yml
+++ b/action.yml
@@ -22,13 +22,13 @@ outputs:
 runs:
   using: 'composite'
   steps:
-#    - name: Conver ID to Name
-#      shell: bash
-#      run: |
-#        get_channel_id=$(curl -X GET "https://slack.com/api/conversations.list" \
-#        -H  "accept: application/x-www-form-urlencoded" \
-#        -H  "Authorization: Bearer ${{ env.SLACK_BOT_TOKEN }}" | python3 -m json.tool | grep -B1 ${{ inputs.slack_channel }} | head -1 | cut -d"\"" -f4)
-#        echo "slack_channel_id=$get_channel_id" >> $GITHUB_ENV
+    - name: Convert Slack channel ID to Name
+      shell: bash
+      run: |
+        get_channel_id=$(curl -X GET "https://slack.com/api/conversations.list?limit=1000&pretty=1" \
+        -H  "accept: application/x-www-form-urlencoded" \
+        -H  "Authorization: Bearer ${{ env.SLACK_BOT_TOKEN }}" | python3 -m json.tool | grep -B1 ${{ inputs.slack_channel }} | head -1 | cut -d"\"" -f4)
+        echo "slack_channel_id=$get_channel_id" >> $GITHUB_ENV
     - name: Set Slack color
       shell: bash
       run: |
@@ -39,12 +39,14 @@ runs:
         elif [[ ${{ inputs.slack_color }} == 'danger' ]]; then
           echo "emoji=:red_circle:" >> $GITHUB_ENV
         fi
+    - name: Set Timestamp
+      shell: bash
+      run: echo "timestamp=$(date +%s)" >> $GITHUB_ENV
     - name: Slack Action
       uses: slackapi/slack-github-action@v1
       id: slack
       with:
-#        channel-id: "${{ env.slack_channel_id }}" 
-        channel-id: "${{ inputs.slack_channel }}" 
+        channel-id: "${{ env.slack_channel_id }}" 
         update-ts: ${{ inputs.update_ts }}
         payload: |
           {
@@ -54,14 +56,14 @@ runs:
                 "color": "${{ inputs.slack_color }}",
                 "fields": [
                   {
+                    "title": "Repo",
+                    "short": true,
+                    "value": "<https://github.com/${{ github.repository }}|${{ github.repository }}>"
+                  },
+                  {
                     "title": "Workflow",
                     "short": true,
                     "value": "<https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|${{ github.workflow }}>"
-                  },
-                  {
-                    "title": "Branch",
-                    "value": "<https://github.com/${{ github.repository }}/tree/${{ github.head_ref || github.ref_name}}|${{ github.head_ref || github.ref_name}}>",
-                    "short": true
                   },
                   {
                     "title": "Status",
@@ -69,11 +71,19 @@ runs:
                     "short": true
                   },
                   {
+                    "title": "Branch",
+                    "value": "<https://github.com/${{ github.repository }}/tree/${{ github.head_ref || github.ref_name}}|${{ github.head_ref || github.ref_name}}>",
+                    "short": true
+                  },
+                  {
                     "title": "Event",
                     "value": "<${{ github.event.pull_request.html_url || github.event.head_commit.url }}|${{ github.event_name }}>",
                     "short": true
                   }
-                ]
+                ],
+                "footer": "${{ github.repository }}",
+                "footer_icon": "https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-9/69063507_3531984646874690_7772827298843066368_n.png?_nc_cat=100&ccb=1-7&_nc_sid=174925&_nc_ohc=j4iC0WAS7xgAX9dPpIu&_nc_ht=scontent-arn2-2.xx&oh=00_AfBviMf2oRH1PbHc9zspigJu0mhg9zBbbijDX-ra3MtGZA&oe=63B113D2",
+                "ts": "<!date^${{ env.timestamp }}^{date} {time_secs}|Timestamp Fallback>"
               }
             ]
           }
