--- a/action.yml
+++ b/action.yml
@@ -83,7 +83,7 @@ runs:
                 ],
                 "footer": "${{ github.repository }}",
                 "footer_icon": "https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-9/69063507_3531984646874690_7772827298843066368_n.png?_nc_cat=100&ccb=1-7&_nc_sid=174925&_nc_ohc=j4iC0WAS7xgAX9dPpIu&_nc_ht=scontent-arn2-2.xx&oh=00_AfBviMf2oRH1PbHc9zspigJu0mhg9zBbbijDX-ra3MtGZA&oe=63B113D2",
-                "ts": <!date^${{ env.timestamp }}^{date} {time_secs}|Timestamp Fallback>
+                "ts": "<!date^${{ env.timestamp }}^{date} {time}|Timestamp Fallback>"
               }
             ]
           }
