--- a/action.yml
+++ b/action.yml
@@ -46,8 +46,9 @@ runs:
         for each in $(echo ${{ inputs.status }})
         do
           echo $each
-          echo "${{ env.emoji }}$each\n" >> slack_statuses
+          echo "${{ env.emoji }} $each\n" >> slack_statuses
         done
+        cat slack_statuses
         echo "statuses=$(cat slack_statuses)" >> $GITHUB_OUTPUT
         rm -f ./slack_statuses
     - name: Set Timestamp
