--- a/action.yml
+++ b/action.yml
@@ -46,12 +46,16 @@ runs:
         for each in $(echo ${{ inputs.status }})
         do
           echo $each
-          echo "${{ env.emoji }} $each\n" >> $GITHUB_OUTPUT
+          echo "${{ env.emoji }} $each" >> slack_statuses
         done
-#        cat slack_statuses
-#        statuses="${$(cat slack_statuses)//$'\n'/'%0A'}"
-#        echo "statuses=$statuses" >> $GITHUB_OUTPUT
-#        rm -f ./slack_statuses
+        test_string=$(cat << EOF
+        $(cat slack_statuses)
+        EOF
+        )
+        cat slack_statuses
+        statuses="${test_string//$'\n'/'%0A'}"
+        echo "statuses=$statuses" >> $GITHUB_OUTPUT
+        rm -f ./slack_statuses
     - name: Set Timestamp
       shell: bash
       run: echo "timestamp=$(date +%s)" >> $GITHUB_ENV
