--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
     required: true
   status:
     description: 'Custom status as a string'
-    required: true
+    required: false
   update_status:
     description: 'Update status'
     required: false
