--- a/action.yml
+++ b/action.yml
@@ -46,15 +46,19 @@ runs:
       shell: bash
       id: status
       run: |
-        if [ -z ${{ inputs.update_status }} ];then
-          for each in $(echo ${{ inputs.status }})
-          do
-            echo $each
-            echo "$each=${{ env.emoji }} $each\n" >> $GITHUB_OUTPUT
-          done
-        else
-          echo "${{ inputs.update_status }}=${{ env.emoji }} ${{ inputs.update_status }}\n" >> $GITHUB_OUTPUT
-        fi
+       for each in $(echo ${{ inputs.status }})
+       do
+         echo $each
+         echo "$each=${{ env.emoji }} $each\n" >> $GITHUB_OUTPUT
+       done
+
+       echo "${{ inputs.update_status }}=${{ env.emoji }} ${{ inputs.update_status }}\n" >> $GITHUB_OUTPUT
+    - name: Get message
+      shell: bash
+      id: message
+      run: |
+        curl -X GET "https://slack.com/api/conversations.history?channel=${{ env.channel_id }}&inclusive=true&latest=1675424253&limit=1&pretty=1" \
+        -H "Authorization: Bearer ${{ env.SLACK_BOT_TOKEN }}"
     - name: Set Timestamp
       shell: bash
       run: echo "timestamp=$(date +%s)" >> $GITHUB_ENV
