--- a/action.yml
+++ b/action.yml
@@ -32,6 +32,13 @@ runs:
         -H  "accept: application/x-www-form-urlencoded" \
         -H  "Authorization: Bearer ${{ env.SLACK_BOT_TOKEN }}" | jq -r '.channels[]|select(.name=="'${{ inputs.channel }}'") | .id')
         echo "channel_id=$get_channel_id" >> $GITHUB_ENV
+    - name: Get message
+      shell: bash
+      id: message
+      run: |
+        curl -X GET \
+        "https://slack.com/api/conversations.history?channel=${{ env.channel_id }}&inclusive=true&latest=1675424253&limit=1&pretty=1" \
+        -H "Authorization: Bearer ${{ env.SLACK_BOT_TOKEN }}"
     - name: Set Slack color
       shell: bash
       run: |
@@ -46,19 +53,15 @@ runs:
       shell: bash
       id: status
       run: |
-       for each in $(echo ${{ inputs.status }})
-       do
-         echo $each
-         echo "$each=${{ env.emoji }} $each\n" >> $GITHUB_OUTPUT
-       done
-
-       echo "${{ inputs.update_status }}=${{ env.emoji }} ${{ inputs.update_status }}\n" >> $GITHUB_OUTPUT
-    - name: Get message
-      shell: bash
-      id: message
-      run: |
-        curl -X GET "https://slack.com/api/conversations.history?channel=${{ env.channel_id }}&inclusive=true&latest=1675424253&limit=1&pretty=1" \
-        -H "Authorization: Bearer ${{ env.SLACK_BOT_TOKEN }}"
+        if [ -z ${{ inputs.update_status }} ];then
+          for each in $(echo ${{ inputs.status }})
+          do
+            echo $each
+            echo "$each=${{ env.emoji }} $each\n" >> $GITHUB_OUTPUT
+          done
+        else
+          echo "${{ inputs.update_status }}=${{ env.emoji }} ${{ inputs.update_status }}\n" >> $GITHUB_OUTPUT
+        fi
     - name: Set Timestamp
       shell: bash
       run: echo "timestamp=$(date +%s)" >> $GITHUB_ENV
