--- a/action.yml
+++ b/action.yml
@@ -42,7 +42,7 @@ runs:
           statuses=$(curl -X GET \
           "https://slack.com/api/conversations.history?channel=${{ env.channel_id }}&inclusive=true&latest=${{ inputs.message_id }}&limit=1&pretty=1" \
           -H "Authorization: Bearer ${{ env.SLACK_BOT_TOKEN }}" | jq -r '.messages[].attachments[].fields[]|select(.title=="Status") | .value' | sed '/^$/d')
-          echo "multi_status=$statuses" >> $GITHUB_ENV
+          echo "multi_status=$statuses" >> $GITHUB_OUTPUT
         fi
     - name: Set Slack color
       shell: bash
@@ -65,8 +65,8 @@ runs:
             echo "$each=${{ env.emoji }} $each\n" >> $GITHUB_OUTPUT
           done
         else
-          pattern=$(echo ${{ env.multi_status }} | grep ${{ inputs.update_status }})
-          new_statuses=$(echo ${{ env.multi_status }} | sed "/$pattern/${{ env.emoji }}\ ${{ inputs.update_status }}")
+          pattern=$(echo ${{ steps.message_statuses.outputs.multi_status }} | grep ${{ inputs.update_status }})
+          new_statuses=$(echo ${{ steps.message_statuses.outputs.multi_status }} | sed "/$pattern/${{ env.emoji }}\ ${{ inputs.update_status }}")
 
           for each in $(echo $new_statuses | cut -d" " -f2)
           do
