--- a/action.yml
+++ b/action.yml
@@ -42,7 +42,10 @@ runs:
           statuses=$(curl -X GET \
           "https://slack.com/api/conversations.history?channel=${{ env.channel_id }}&inclusive=true&latest=${{ inputs.message_id }}&limit=1&pretty=1" \
           -H "Authorization: Bearer ${{ env.SLACK_BOT_TOKEN }}" | jq -r '.messages[].attachments[].fields[]|select(.title=="Status") | .value' | sed '/^$/d')
-          echo "multi_status=$statuses" >> $GITHUB_OUTPUT
+          for string in statuses
+          do
+            echo "multi_status=$string" >> $GITHUB_OUTPUT
+          done
         fi
     - name: Set Slack color
       shell: bash
