--- a/action.yml
+++ b/action.yml
@@ -67,8 +67,8 @@ runs:
             echo "$each=${{ env.emoji }} $each\n" >> $GITHUB_OUTPUT
           done
         else
-          pattern=$(echo ${{ steps.message_statuses.outputs.multi_status }} | grep ${{ inputs.update_status }})
-          new_statuses=$(echo ${{ steps.message_statuses.outputs.multi_status }} | sed "/$pattern/${{ env.emoji }}\ ${{ inputs.update_status }}")
+          pattern=$(echo ${{ env.multi_status }} | grep ${{ inputs.update_status }})
+          new_statuses=$(echo ${{ env.multi_status }} | sed "/$pattern/${{ env.emoji }}\ ${{ inputs.update_status }}")
 
           for each in $(echo $new_statuses | cut -d" " -f2)
           do
