--- a/action.yml
+++ b/action.yml
@@ -67,9 +67,9 @@ runs:
             echo "$each=${{ env.emoji }} $each\n" >> $GITHUB_OUTPUT
           done
         else
-          pattern=$(echo ${{ env.multi_status }} | grep ${{ inputs.update_status }})
+          pattern=$(echo "${{ env.multi_status }}" | grep ${{ inputs.update_status }})
           echo "pattern - " $pattern
-          new_statuses=$(echo ${{ env.multi_status }} | sed "/$pattern/${{ env.emoji }}\ ${{ inputs.update_status }}")
+          new_statuses=$(echo "${{ env.multi_status }}" | sed "/$pattern/${{ env.emoji }}\ ${{ inputs.update_status }}")
           echo "new statuses - " $new_statuses
           for each in $(echo $new_statuses | cut -d":" -f3 | cut -d" " -f2)
           do
