--- a/action.yml
+++ b/action.yml
@@ -45,6 +45,10 @@ runs:
           echo "multi_status<<EOF" >> $GITHUB_ENV
           echo "$statuses" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
+          for value in $statuses
+          do
+            echo "value is - $value"
+          done
         fi
     - name: Set Slack color
       shell: bash
