--- a/action.yml
+++ b/action.yml
@@ -41,13 +41,10 @@ runs:
         else
           statuses=$(curl -X GET \
           "https://slack.com/api/conversations.history?channel=${{ env.channel_id }}&inclusive=true&latest=${{ inputs.message_id }}&limit=1&pretty=1" \
-          -H "Authorization: Bearer ${{ env.SLACK_BOT_TOKEN }}" | jq -r '.messages[].attachments[].fields[]|select(.title=="Status") | .value' | sed '/^$/d')
-          echo "multi_status<<EOF" >> $GITHUB_ENV
-          echo "$statuses" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
-          for value in $statuses
+          -H "Authorization: Bearer ${{ env.SLACK_BOT_TOKEN }}" | jq -r '.messages[].attachments[].fields[]|select(.title=="Status") | .value' | sed '/^$/d' | sed 's/^/\"/' | sed 's/$/\"/')
+          for string in $statuses
           do
-            echo "value is - $value"
+            echo "$string"
           done
         fi
     - name: Set Slack color
