--- a/action.yml
+++ b/action.yml
@@ -42,9 +42,9 @@ runs:
           statuses=$(curl -X GET \
           "https://slack.com/api/conversations.history?channel=${{ env.channel_id }}&inclusive=true&latest=${{ inputs.message_id }}&limit=1&pretty=1" \
           -H "Authorization: Bearer ${{ env.SLACK_BOT_TOKEN }}" | jq -r '.messages[].attachments[].fields[]|select(.title=="Status") | .value' | sed '/^$/d' | sed 's/^/\"/' | sed 's/$/\"/')
-          for string in $statuses
-          do
-            echo "$string"
+          declare -a Statuses=($statuses)
+          for string in "${Statuses[@]}";do
+            echo $string
           done
         fi
     - name: Set Slack color
