--- a/action.yml
+++ b/action.yml
@@ -41,10 +41,9 @@ runs:
         else
           statuses=$(curl -X GET \
           "https://slack.com/api/conversations.history?channel=${{ env.channel_id }}&inclusive=true&latest=${{ inputs.message_id }}&limit=1&pretty=1" \
-          -H "Authorization: Bearer ${{ env.SLACK_BOT_TOKEN }}" | jq -r '.messages[].attachments[].fields[]|select(.title=="Status") | .value' | sed '/^$/d' | sed 's/^/\"/' | sed 's/$/\"/')
+          -H "Authorization: Bearer ${{ env.SLACK_BOT_TOKEN }}" | jq -r '.messages[].attachments[].fields[]|select(.title=="Status") | .value' | sed '/^$/d' | sed 's/^/\"/' | sed 's/$/\"/' | sed 's/ /-/')
           echo $statuses
-          declare -a Statuses=($statuses)
-          for string in "${Statuses[@]}";do
+          for string in $statuses;do
             echo $string
           done
         fi
