--- a/action.yml
+++ b/action.yml
@@ -41,10 +41,14 @@ runs:
         else
           statuses=$(curl -X GET \
           "https://slack.com/api/conversations.history?channel=${{ env.channel_id }}&inclusive=true&latest=${{ inputs.message_id }}&limit=1&pretty=1" \
-          -H "Authorization: Bearer ${{ env.SLACK_BOT_TOKEN }}" | jq -r '.messages[].attachments[].fields[]|select(.title=="Status") | .value' | sed '/^$/d' | sed 's/^/\"/' | sed 's/$/\"/' | sed 's/ /-/')
+          -H "Authorization: Bearer ${{ env.SLACK_BOT_TOKEN }}" | jq -r '.messages[].attachments[].fields[]|select(.title=="Status") | .value' | sed '/^$/d' | sed 's/ /-/')
           echo $statuses
           for string in $statuses;do
             echo $string
+          done
+          for each in $(echo $statuses | cut -d":" -f3 | cut -d"_" -f2);do
+            echo "$each"
+            echo "$each=$(echo $statuses | grep $each)" >> $GITHUB_OUTPUT
           done
         fi
     - name: Set Slack color
