--- a/action.yml
+++ b/action.yml
@@ -42,9 +42,6 @@ runs:
           statuses=$(curl -X GET \
           "https://slack.com/api/conversations.history?channel=${{ env.channel_id }}&inclusive=true&latest=${{ inputs.message_id }}&limit=1&pretty=1" \
           -H "Authorization: Bearer ${{ env.SLACK_BOT_TOKEN }}" | jq -r '.messages[].attachments[].fields[]|select(.title=="Status") | .value' | sed '/^$/d' | sed 's/ /-/')
-          for string in $statuses;do
-            echo $string
-          done
           for each in $statuses;do
             echo "$each"
             name=$(echo $each | cut -d":" -f3 | cut -d"-" -f2)
@@ -72,9 +69,9 @@ runs:
             echo "$each=${{ env.emoji }} $each\n" >> $GITHUB_OUTPUT
           done
         else
-          for value in ${{ env.multi_status }}
+          for each in ${{ steps.message_statuses.outputs.* }}
           do
-            echo "$value"
+            echo "$each"
           done
           cat statuses.txt
           pattern=$(cat statuses.txt | grep ${{ inputs.update_status }})
