--- a/action.yml
+++ b/action.yml
@@ -69,7 +69,7 @@ runs:
             echo "$each=${{ env.emoji }} $each\n" >> $GITHUB_OUTPUT
           done
         else
-          for each in ${{join(steps.message_statuses.outputs.*, '\n')}};do
+          for each in ${{join(steps.message_statuses.outputs.*, ' ')}};do
             echo "$each"
             pattern=$(echo $each | grep ${{ inputs.update_status }})
             if [ -z $pattern ];then
