--- a/action.yml
+++ b/action.yml
@@ -75,9 +75,9 @@ runs:
             if [ -z $pattern ];then
               echo "skipped"
             else
-              $each=$(echo $each | sed "s/$pattern/${{ env.emoji }}-${{ inputs.update_status }}/")
+              $each=$(echo "$each" | sed "s/$pattern/${{ env.emoji }}-${{ inputs.update_status }}/")
             fi
-            name=$(echo $each | cut -d":" -f3 | cut -d"-" -f2)
+            name=$(echo "$each" | cut -d":" -f3 | cut -d"-" -f2)
             echo "$name=${{ env.emoji }} $(echo "$each" | sed 's/-/ /')\n" >> $GITHUB_OUTPUT
           done
         fi
