--- a/action.yml
+++ b/action.yml
@@ -81,7 +81,7 @@ runs:
             fi
             name=$(echo "$each" | cut -d":" -f3 | cut -d"-" -f2)
             echo "$name"
-            echo "$name=${{ env.emoji }} $(echo "$each" | sed 's/-/ /')\n" >> $GITHUB_OUTPUT
+            echo "$name=$(echo "$each" | sed 's/-/ /')\n" >> $GITHUB_OUTPUT
           done
         fi
     - name: Set Timestamp
