--- a/action.yml
+++ b/action.yml
@@ -71,6 +71,8 @@ runs:
         else
           for each in ${{join(steps.message_statuses.outputs.*, ' ')}};do
             echo "$each"
+            echo "check pattern"
+            echo "$each" | grep ${{ inputs.update_status }}
             pattern=$(echo "$each" | grep ${{ inputs.update_status }})
             echo "$pattern"
             if [ -z $pattern ];then
