--- a/action.yml
+++ b/action.yml
@@ -93,7 +93,7 @@ runs:
         if [[ -z "${{ inputs.update_status }}" || "${{ inputs.color }}" == danger ]];then
           echo "color=${{ inputs.color }}" >> $GITHUB_ENV
         else
-          for each in ${{join(steps.status.outputs., '\n')}};do
+          for each in ${{join(steps.status.outputs.*, '\n')}};do
             name=$(echo "$each" | cut -d":" -f3 | cut -d"-" -f2)
             echo "$name"
             echo "$each" | grep -v "$name" | grep ':hourglass_flowing_sand:' || true
